<resources>
    <string name="app_name">MyBlog</string>
    <string name="tittle">MyBlog</string>
    <string name="sub_tittle">My Personal Blog</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform_Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="name">Name</string>
    <string name="cb_terms">I accept terms &amp; condition </string>
    <string name="terms">Terms &amp; Condition</string>


</resources>