<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".auth.SignUp">

    <TextView
        android:id="@+id/lb_Tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/tittle"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lb_SubTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/sub_tittle"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_Tittle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lb_SubTittle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/text_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:met_baseColor="@color/baseColor"
                app:met_errorColor="@color/errorColor"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Email"
                app:met_iconLeft="@drawable/round_person_white_24"
                app:met_iconPadding="5dp"
                app:met_primaryColor="@color/primaryColor" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/text_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Name"
                app:met_baseColor="@color/baseColor"
                app:met_errorColor="@color/errorColor"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Name"
                app:met_iconLeft="@drawable/round_email_white_24"
                app:met_iconPadding="5dp"
                app:met_primaryColor="@color/primaryColor" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/text_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Email"
                app:met_baseColor="@color/baseColor"
                app:met_checkCharactersCountAtBeginning="false"
                app:met_errorColor="@color/errorColor"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Password"
                app:met_iconLeft="@drawable/round_lock_white_24"
                app:met_iconPadding="5dp"
                app:met_maxCharacters="15"
                app:met_primaryColor="@color/primaryColor" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/text_Conform_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/conform_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Password"
                app:met_baseColor="@color/baseColor"
                app:met_checkCharactersCountAtBeginning="false"
                app:met_errorColor="@color/errorColor"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="Password"
                app:met_iconLeft="@drawable/round_lock_white_24"
                app:met_iconPadding="5dp"
                app:met_maxCharacters="15"
                app:met_primaryColor="@color/primaryColor" />

            <CheckBox
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/baseColor"
                android:fontFamily="sans-serif"
                android:text="@string/cb_terms"
                android:textColor="@color/baseColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Conform_Password" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@color/bg"
                android:fontFamily="sans-serif"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/terms" />

            <TextView
                android:id="@+id/lb_CreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/terms"
                android:textColor="@color/baseColor"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>